--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "5000:5000"
     volumes:
-      - ./backend:/usr/src/app  # Map your local backend code
+      - ./backend:/usr/src/app  
     command: python app/main.py
 
 
@@ -19,6 +19,6 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./frontend:/usr/src/app  # Map your local frontend code
-      - /usr/src/app/node_modules  # Ensure node_modules inside the container is preserved
+      - ./frontend:/usr/src/app  
+      - /usr/src/app/node_modules  
     command: npm start
