--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,11 @@
     "globe.gl": "^2.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-scripts": "^5.0.1",
-    "three": "^0.125.0"
+    "react-scripts": "^3.0.1",
+    "three": "^0.169.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-private-property-in-object": "^7.25.7"
   },
   "browserslist": {
     "production": [
